<resources>
    <string name="app_name">Hostel Management System</string>
    <string name="s6">Room No</string>
    <string name="submit">Submit</string>
    <string name="hostel_management_system">Hostel Management System</string>
    <string name="staff">For Staff</string>
    <string name="for_student">For Student</string>
    <string name="student_login_portal">Student LogIn Portal</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="student_registration_portal">Student Registration Portal</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="staff_login_portal">Staff LogIn Portal</string>
    <string name="staff_registration_portal">Staff Registration Portal</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No</string>
    <string name="your_role_or_position">Your Role or Position</string>
    <string name="roll_no">Roll No</string>
    <string name="enrollment_no">Enrolment No</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="already_have_account_login_here">Already have Account? LogIn here</string>
    <string name="enter_email">Enter email</string>
    <string name="update">Update</string>
    <string name="update_data">Update Data</string>
    <string name="student_name">Student name</string>
    <string name="show_all_students">Show all Students</string>
    <string name="password_enrolment_no">Password (Enrolment No)</string>
    <string name="update_info">Update Info</string>
    <string name="s1">Click here for Hostel Allotment</string>
    <string name="your_hostel_name">(1) Your Hostel Name : </string>
    <string name="_2_your_room_type">(2) Your Room Type</string>
    <string name="thanks_for_filling_information">Thanks for filling Information !</string>
    <string name="s2">Help us to maintain the Database by providing following information</string>
</resources>